Fix home page overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -33,6 +33,7 @@ html, body, #root {
   display: flex;
   align-items: center;
   justify-content: center;
+  align-content: center;
   flex-wrap: wrap;
   gap: 10px;
 
